fixed error in bar chart key and altered spacing

--- a/website-code/css/grimm_css.css
+++ b/website-code/css/grimm_css.css
@@ -110,7 +110,7 @@ table {
 }
 
 .smallishMargins {
-    margin-left: 10px;
+    margin: 10px;
 }
 
 /* Temporary fix for centering bulleted flex containers */
